--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Escape</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Collect keys to escape
 </li>
 
 <li><strong>Player Experience Goals:</strong>
