--- a/index.html
+++ b/index.html
@@ -30,43 +30,43 @@ Collect keys to escape
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+Hard time finding the keys.
 </li>
 
 <li><strong>Genre:</strong>
-A single sentence that places the game within a game genre or a hybrid of genres.
+Puzzle I geus since it is a maze.
 </li>
 
 <li><strong>Game play:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+Player uses the arrow keys to move around and find the keys.
 </li>
 
 <li><strong>Prototype goal:</strong>
-What game mechanic is this prototype evaluating?
+Tried Tilemaps but couldn't get it to work so just messed with the camera and world size
 </li>
 
 <li><strong>Features:</strong>
-What are the unique aspects of your game that set it apart?
+smal screen
 </li>
 
 <li><strong>Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, put it here. If the game is abstract, then say so.
+trpped in dungeon need to keys to get out
 </li>
 
 <li><strong>Story:</strong>
-If the game has a story, summarize it in a paragraph. How will the dramatic tension interact with the gameplay tension?
+No story really
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+Anyone who likes mazes.
 </li>
 
 <li><strong>Play time:</strong>
-How long does your game take to play?
+A couple of minutes at best.
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+Any strategy that works with mazes
 </li>
 
 <li><strong>Prototype Assets:</strong>
